[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexstrike"
version = "6.0.0"
description = "HexStrike AI MCP Agents"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "flask>=2.3.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
    "fastmcp>=0.2.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "selenium>=4.15.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "mitmproxy>=9.0.0,<11.0.0",
    "bcrypt==4.0.1",
]

[project.optional-dependencies]
binary = [
    "pwntools>=4.10.0,<5.0.0",
    "angr>=9.2.0,<10.0.0",
]

[project.scripts]
hexstrike_server = "hexstrike_server_main:main"
hexstrike_mcp = "hexstrike_mcp:main"

[tool.setuptools]
py-modules = ["hexstrike_server", "hexstrike_mcp", "hexstrike_server_main"]
